# meater_monitor

./: CMakeLists.txt  prj.conf  west.yml
docs/: characteristics.txt
include/: probe_connection.h  temperature_display.h
src/: main.c  probe_connection.c  temperature_display.c
